--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "db:stdio": "drizzle-kit studio"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.7.1",
+    "@clerk/backend": "^0.24.0",
+    "@clerk/clerk-sdk-node": "^4.10.15",
+    "@clerk/nextjs": "^4.6.18",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@stripe/stripe-js": "^4.7.0",
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookie": "^0.7.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "lucide-react": "^0.447.0",
@@ -29,6 +33,7 @@
     "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
+    "stripe": "^17.1.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
