--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@stripe/stripe-js": "^4.7.0",
     "@tanstack/react-table": "^8.20.5",
+    "ai-readme-builder": "^0.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
